--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -42,10 +42,9 @@
               </div>
             </nav>
         </header>
-        <main>
-            {{template "main" .}}
-        </main>
-        <!-- Invoke the footer template -->
+         <main role="main" class="container">
+                 {{ template "main" . }}
+             </main>
                 {{template "footer" .}}
     </body>
 </html>
